# drone_inspetor

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
drone_inspetor/config/: param_gui.yaml  param_ros.yaml  params.yaml  ros_gz_bridges.yaml
drone_inspetor/gui/: camera_screen.py  controles.py  cv_screen.py  dashboard_gui.py  depth_screen.py  fsm.py  lidar_dashboard.html  lidar_screen.py  log_analise.py  map.html  mapa.py  utils.py
drone_inspetor/gui/leaflet_local/: leaflet.css
drone_inspetor/launch/: dashboard_launch.py  drone_inspetor_launch.py  simulation_launch.py
drone_inspetor/missions/: missions.json
drone_inspetor/nodes/: camera_node.py  cv_node.py  dashboard_node.py  depth_node.py  drone_node.py  fsm_node.py  lidar_node.py
drone_inspetor/publishers/: __init__.py  dashboard_camera_publisher.py  dashboard_cv_publisher.py  dashboard_depth_publisher.py  dashboard_drone_publisher.py  dashboard_fsm_publisher.py  dashboard_lidar_publisher.py  dashboard_mapa_publisher.py
drone_inspetor/scripts/: mission_control.py  offboard_control.py  simulation-gazebo.py  teste_comando_iniciar_missao_fsm.sh  teste_critico.sh
drone_inspetor/signals/: __init__.py  dashboard_signals.py
drone_inspetor/subscribers/: __init__.py  dashboard_camera_subscriber.py  dashboard_cv_subscriber.py  dashboard_depth_subscriber.py  dashboard_drone_subscriber.py  dashboard_fsm_subscriber.py  dashboard_lidar_subscriber.py  dashboard_mapa_subscriber.py
drone_inspetor/worlds/: oceano.sdf
scripts/: teste_critico.sh
